fixed text in content div not fitting when shrinking the browser

--- a/app/assets/stylesheets/pages.scss
+++ b/app/assets/stylesheets/pages.scss
@@ -43,12 +43,15 @@ body {
 	position:relative;
 }
 .content {
-	margin: 0 auto;
+	margin: auto auto;
 	padding: 50px;
 	width: 50%;
+	height:50%;
 	background:#aaaa;
+	text-align:center;
 	font-family: 'Hepta Slab', serif;
-	font-size: 25px;
+	font-size:1.75vw;
+	
 }
 /* Add a black background color to the top navigation */
 .topnav {
